--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.hobba</groupId>
-    <artifactId>HobaAuthServer</artifactId>
+    <artifactId>hoba-authentication</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
-    <name>HobaAuthServer</name>
+    <name>hoba-authentication</name>
 
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
@@ -169,7 +169,7 @@
             </plugin>
         </plugins>
     
-    <finalName>hobaauthserver</finalName>
+    <finalName>hoba-autthentication</finalName>
     </build>
     
 </project>
