--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -17,7 +17,10 @@
             <param-name>org.glassfish.jersey.config.property.packages</param-name>
             <param-value>com.hobba.hobaserver.services</param-value>
         </init-param>
-        
+        <init-param>
+            <param-name>org.glassfish.jersey.config.property.packages</param-name>
+            <param-value>com.hobba.hobaserver.services</param-value>
+        </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
     <servlet-mapping>
