--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,7 @@
             <artifactId>jersey-container-servlet</artifactId>
             <version>2.5.1</version>
         </dependency>
-         <dependency>
+        <dependency>
             <groupId>org.glassfish.jersey.media</groupId>
             <artifactId>jersey-media-json-jackson</artifactId>
             <version>2.5.1</version>
@@ -157,9 +157,27 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>net.alchim31.maven</groupId>
+                <artifactId>yuicompressor-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>compress</goal>
+                        </goals>
+                    </execution>
+                </executions>      
+                <configuration>
+                    <excludes>
+                        <exclude>**/*.pack.js</exclude>
+                        <exclude>**/*min.js</exclude>
+                        <exclude>**/compressed.css</exclude>
+                    </excludes>
+                </configuration>  
+            </plugin>
         </plugins>
     
-    <finalName>hoba-authentication</finalName>
+        <finalName>hoba-authentication</finalName>
     </build>
     
 </project>
